--- a/src/style/app.less
+++ b/src/style/app.less
@@ -10,6 +10,8 @@
 body {
   font-size: 1pc;
   font-family: ArialMT,Arial;
-  background-color: green;
-}
+  background: white;
+  /* padding: 20px; */
+  overflow: scroll;
+  margin: 0;}
 
