--- a/src/containers/gridShowCase/style/example-styles.less
+++ b/src/containers/gridShowCase/style/example-styles.less
@@ -1,8 +1,8 @@
-body {
-  background: white;
-  padding: 20px;
-  overflow: scroll;
-}
+//body {
+//  background: white;
+//  padding: 20px;
+//  overflow: scroll;
+//}
 #content {
   width: 100%;
 }
