Certificates and a2hs

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -7,11 +7,20 @@
 //    stroke-linejoin: round;
 //  }
 //}
+html {
+  height: 100%;
+}
+
 body {
   font-size: 1pc;
   font-family: ArialMT,Arial;
   background: white;
   /* padding: 20px; */
-  overflow: scroll;
-  margin: 0;}
+  overflow: hidden;
+  margin: 0;
+  height: 100%;
+}
 
+.app-container {
+  height: 100%;
+}
